--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<div id="mobile-boids-controls">
 				<button id="introversion-mobile">Introversion</button>
 				<button id="speed-mobile">Speed</button>
-				<button id="walls-mobile" class="boids-checkbox-on">Walls</button>
-				<button id="collisions-mobile">Collisions</button>
-				<button id="mouse-seek-mobile">Seek Mouse</button>
+				<button id="motos-mobile" class="boids-checkbox-on">Motos</button>
+				<button id="cars-mobile">Cars</button>
+				<button id="buses-mobile">Buses</button>
 				<button id="racism-mobile">Racism</button>
 				<button id="diversity-mobile">Diversity</button>
 			</div>
@@ -41,23 +41,23 @@
 			</div>
 			<div class="boids-control boids-control-checkbox">
 				<div class="checkbox">
-					<p>Walls</p>
-					<input type="checkbox" id="walls" name="walls"/>
-					<label for="walls"></label>
+					<p>Motos</p>
+					<input type="checkbox" id="motos" name="motos"/>
+					<label for="motos"></label>
 				</div>
 			</div>
 			<div class="boids-control boids-control-checkbox">
 				<div class="checkbox">
-					<p>Collisions</p>
-					<input type="checkbox" id="collision-detection" name="collision-detection"/>
-					<label for="collision-detection"></label>
+					<p>Cars</p>
+					<input type="checkbox" id="cars" name="cars"/>
+					<label for="cars"></label>
 				</div>
 			</div>
 			<div class="boids-control boids-control-checkbox">
 				<div class="checkbox">
-					<p>Seek Mouse</p>
-					<input type="checkbox" id="mouse-seek" name="mouse-seek"/>
-					<label for="mouse-seek"></label>
+					<p>Buses</p>
+					<input type="checkbox" id="buses" name="buses"/>
+					<label for="buses"></label>
 				</div>
 			</div>
 			<div id="racism-control-container" class="boids-control boids-control-range">
@@ -71,7 +71,7 @@
 			<div id="diversity-control-container" class="boids-control boids-control-range">
 				<span class="boids-control-close"></span>
 				<div class="range-slider">
-					<label for="introversion"><p>Diversity</p></label>
+					<label for="diversity"><p>Diversity</p></label>
 					<input class="input-range" type="range" step="1" value="8" min="1" max="8" name="diversity" id="diversity">
 			    <span class="range-value"></span>
 				</div>
