--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
     <canvas id="boids"></canvas>
 		<div id="boids-controls-container">
 			<div id="mobile-boids-controls">
-				<button id="introversion-mobile">Introversion</button>
+				<button id="caution-mobile">Caution</button>
 				<button id="speed-mobile">Speed</button>
 				<button id="motos-mobile" class="boids-checkbox-on">Motos</button>
 				<button id="cars-mobile">Cars</button>
 				<button id="buses-mobile">Buses</button>
 			</div>
-			<div id="introversion-control-container" class="boids-control boids-control-range">
+			<div id="caution-control-container" class="boids-control boids-control-range">
 				<span class="boids-control-close"></span>
 				<div class="range-slider">
-					<label for="introversion"><p>Introversion</p></label>
-					<input class="input-range" type="range" step="1" value="5" min="0" max="10" name="introversion" id="introversion">
+					<label for="caution"><p>Caution</p></label>
+					<input class="input-range" type="range" step="1" value="5" min="0" max="10" name="caution" id="caution">
 			    <span class="range-value"></span>
 				</div>
 			</div>
 			<div id="speed-control-container" class="boids-control boids-control-range">
 				<span class="boids-control-close"></span>
 				<div class="range-slider">
-					<label for="introversion"><p>Speed</p></label>
+					<label for="caution"><p>Speed</p></label>
 					<input class="input-range" type="range" step="1" value="5" min="0" max="10" name="speed" id="speed">
 			    <span class="range-value"></span>
 				</div>
