divide into motos / cars / buses

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<div id="mobile-boids-controls">
 				<button id="caution-mobile">Caution</button>
 				<button id="speed-mobile">Speed</button>
-				<button id="motos-mobile" class="boids-checkbox-on">Motos</button>
-				<button id="cars-mobile">Cars</button>
-				<button id="buses-mobile">Buses</button>
+				<button id="moto-mobile" class="boids-checkbox-on">Motos</button>
+				<button id="car-mobile">Cars</button>
+				<button id="bus-mobile">Buses</button>
 			</div>
 			<div id="caution-control-container" class="boids-control boids-control-range">
 				<span class="boids-control-close"></span>
@@ -40,22 +40,22 @@
 			<div class="boids-control boids-control-checkbox">
 				<div class="checkbox">
 					<p>Motos</p>
-					<input type="checkbox" id="motos" name="motos"/>
-					<label for="motos"></label>
+					<input type="checkbox" id="moto" name="moto"/>
+					<label for="moto"></label>
 				</div>
 			</div>
 			<div class="boids-control boids-control-checkbox">
 				<div class="checkbox">
 					<p>Cars</p>
-					<input type="checkbox" id="cars" name="cars"/>
-					<label for="cars"></label>
+					<input type="checkbox" id="car" name="car"/>
+					<label for="car"></label>
 				</div>
 			</div>
 			<div class="boids-control boids-control-checkbox">
 				<div class="checkbox">
 					<p>Buses</p>
-					<input type="checkbox" id="buses" name="buses"/>
-					<label for="buses"></label>
+					<input type="checkbox" id="bus" name="bus"/>
+					<label for="bus"></label>
 				</div>
 			</div>
 			<div id="fps">
